feat: map gemeinde suche

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,3 +143,14 @@
 		mask-image: none !important;
 	}
 }
+
+[placeholder]:empty::before {
+	content: attr(placeholder);
+	color: #000;
+	font-size: 12px;
+	opacity: 0.5;
+}
+
+[placeholder]:empty:focus::before {
+	content: "";
+}
